# XbSymbolDatabase

./: .clang-format  .gitattributes  .gitconfig  .gitignore  CMakeLists.txt  LICENSE  OOVPA.h  README.md  XbSymbolDatabase.c  XbSymbolDatabase.h  XbSymbolDatabase.vcxproj.filters  Xbe.h  xbSymbolDatabase.vcxproj
.github/: labeler.yml
.github/workflows/: ci.yml  pr_verify_build.yml  pull-request.yml  release.yml
OOVPADatabase/: D3D8.1.0.3911.inl  D3D8.1.0.3925.inl  D3D8.1.0.3947.inl  D3D8.1.0.3948.inl  D3D8.1.0.4034.inl  D3D8.1.0.4039.inl  D3D8.1.0.4134.inl  D3D8.1.0.4242.inl  D3D8.1.0.4361.inl  D3D8.1.0.4432.inl  D3D8.1.0.4531.inl  D3D8.1.0.4627.inl  D3D8.1.0.4831.inl  D3D8.1.0.4928.inl  D3D8.1.0.5028.inl  D3D8.1.0.5120.inl  D3D8.1.0.5233.inl  D3D8.1.0.5344.inl  D3D8.1.0.5455.inl  D3D8.1.0.5558.inl  D3D8.1.0.5788.inl  D3D8.1.0.5849.inl  D3D8.OOVPA.inl  D3D8LTCG.1.0.3911.inl  D3D8LTCG.1.0.4039.inl  D3D8LTCG.1.0.4432.inl  D3D8LTCG.1.0.4531.inl  D3D8LTCG.1.0.4627.inl  D3D8LTCG.1.0.4721.inl  D3D8LTCG.1.0.4928.inl  D3D8LTCG.1.0.5028.inl  D3D8LTCG.1.0.5120.inl  D3D8LTCG.1.0.5233.inl  D3D8LTCG.1.0.5344.inl  D3D8LTCG.1.0.5455.inl  D3D8LTCG.1.0.5788.inl  D3D8LTCG.1.0.5849.inl  D3D8LTCG.OOVPA.inl  D3D8LTCG_OOVPA.inl  D3D8_OOVPA.inl  (+69 more)
OOVPADatabase/D3D8/: 3911.inl  3925.inl  3947.inl  4034.inl  4039.inl  4134.inl  4242.inl  4361.inl  4432.inl  4531.inl  4627.inl  4831.inl  4928.inl  5028.inl  5120.inl  5233.inl  5344.inl  5455.inl  5558.inl  5788.inl  5849.inl
OOVPADatabase/D3D8LTCG/: 3911.inl  4039.inl  4432.inl  4531.inl  4627.inl  4721.inl  4928.inl  5028.inl  5120.inl  5233.inl  5344.inl  5455.inl  5788.inl  5849.inl
OOVPADatabase/DSound/: 3911.inl  3936.inl  4039.inl  4134.inl  4242.inl  4361.inl  4432.inl  4531.inl  4627.inl  4721.inl  4831.inl  5028.inl  5233.inl  5344.inl  5455.inl  5558.inl
OOVPADatabase/JVS/: 4831.inl
OOVPADatabase/XActEng/: 4627.inl  4928.inl  5120.inl  5233.inl  5344.inl  5558.inl
OOVPADatabase/XGraphic/: 3911.inl  4134.inl  4361.inl
OOVPADatabase/XNet/: 3911.inl  4361.inl  4627.inl  5120.inl  5455.inl
OOVPADatabase/XOnline/: 4361.inl  4627.inl  4831.inl  5028.inl  5455.inl  5558.inl  5659.inl  5788.inl  5849.inl
OOVPADatabase/Xapi/: 3911.inl  3950.inl  4039.inl  4134.inl  4242.inl  4361.inl  4432.inl  4721.inl  4831.inl  5028.inl  5120.inl  5344.inl  5455.inl  5788.inl  JVS.r4831.inl
include/: Xbe.h  libCallTypes.h  libParamTypes.h  libXbSymbolDatabase.h
include/xref/: d3d8.def  d3d8ltcg.def  dsound.def  jvs.def  list_xref.h  xacteng.def  xapilib.def  xgraphic.def  xnet.def  xonline.def
projects/: CMakeLists.txt
projects/UnitTest/: CMakeLists.txt
projects/cli/: CMakeLists.txt
projects/libXbSymbolDatabase/: CMakeLists.txt
src/OOVPADatabase/: .clang-format  D3D8LTCG_OOVPA.c  D3D8LTCG_OOVPA.inl  D3D8_OOVPA.c  D3D8_OOVPA.inl  DSound_OOVPA.c  DSound_OOVPA.inl  JVS_OOVPA.c  JVS_OOVPA.inl  OOVPA.h  OOVPA_databases.h  XActEng_OOVPA.c  XActEng_OOVPA.inl  XGraphic_OOVPA.c  XGraphic_OOVPA.inl  XNet_OOVPA.c  XNet_OOVPA.inl  XOnline_OOVPA.c  XOnline_OOVPA.inl  Xapi_OOVPA.c  Xapi_OOVPA.inl
src/OOVPADatabase/D3D8/: 3911.inl  3925.inl  3947.inl  4034.inl  4039.inl  4134.inl  4242.inl  4361.inl  4432.inl  4531.inl  4627.inl  4831.inl  4928.inl  5028.inl  5120.inl  5233.inl  5344.inl  5455.inl  5558.inl  5788.inl  5849.inl
src/OOVPADatabase/D3D8LTCG/: 3911.inl  3925.inl  4034.inl  4039.inl  4134.inl  4432.inl  4531.inl  4627.inl  4721.inl  4928.inl  5028.inl  5120.inl  5233.inl  5344.inl  5455.inl  5558.inl  5788.inl  5849.inl
src/OOVPADatabase/DSound/: 3911.inl  3936.inl  4039.inl  4134.inl  4242.inl  4361.inl  4432.inl  4531.inl  4627.inl  4721.inl  4831.inl  5028.inl  5344.inl  5455.inl  5558.inl
src/OOVPADatabase/JVS/: 4831.inl
src/OOVPADatabase/XActEng/: 4627.inl  4928.inl  5120.inl  5233.inl  5344.inl  5558.inl
src/OOVPADatabase/XGraphic/: 3911.inl  4134.inl  4361.inl  5659.inl
src/OOVPADatabase/XNet/: 3911.inl  4361.inl  4627.inl  5120.inl  5455.inl
src/OOVPADatabase/XOnline/: 4361.inl  4627.inl  4721.inl  4831.inl  5028.inl  5233.inl  5455.inl  5558.inl  5659.inl  5788.inl  5849.inl
src/OOVPADatabase/Xapi/: 3911.inl  3950.inl  4039.inl  4134.inl  4242.inl  4361.inl  4432.inl  4721.inl  4831.inl  5028.inl  5120.inl  5233.inl  5344.inl  5455.inl  5788.inl
src/cli/: main.c
src/lib/: internal_db_version.h  internal_functions.h  internal_tests.h  libXbSymbolDatabase.c  manual_custom.h  manual_d3d8__ltcg.h  manual_dsound.h  manual_jvs.h  manual_xapilib.h
src/test/: libverify.cpp  libverify.hpp  main.cpp
src/test/libverify/: D3D8.cpp  DSOUND.cpp  JVS.cpp  XACTENG.cpp  XAPILIB.cpp  XGRAPHC.cpp  XNET.cpp  XONLINE.cpp  unittest.hpp
src/test/scripts/: README.md  _unittest_cache.bat  _unittest_cache.sh  _unittest_log.bat  _unittest_log.sh  _unittest_verbose.bat  _unittest_verbose.sh
src/test/util/: cliConfig.cpp  cliConfig.hpp  helper.hpp
src/xref/: d3d8.def  d3d8ltcg.def  dsound.def  jvs.def  list_xref.h  xacteng.def  xapilib.def  xgraphic.def  xonline.def
